Refactoring - Encapsulate Field